test(api): reorganize API tests from Playwright to PHPUnit
Move admin-api.spec.ts tests to PHPUnit for better integration with
existing test infrastructure.

Test structure:
- Contract tests (api-contract): Fast unit tests verifying response formats
  - Uses mock data, no database required
  - Included in pre-commit hooks
- Functional tests (api-functional): Full CRUD operations with database
  - Requires Docker environment
  - For CI/full test runs

New test files:
- tests/Api/Contract/ResponseFormatTest.php (fast, no DB)
- tests/Api/Functional/EndpointAvailabilityTest.php
- tests/Api/Functional/ActivityCrudTest.php
- tests/Api/Functional/CustomerCrudTest.php
- tests/Api/Functional/ProjectCrudTest.php
- tests/Api/Functional/DataIntegrityTest.php

Removed: e2e/admin-api.spec.ts (migrated to PHPUnit)

Updated:
- phpunit.xml.dist: Added api-contract and api-functional testsuites
- Makefile: Added test-quick and test-api-functional targets
- captainhook.json: Added API contract tests to pre-commit hook

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -69,6 +69,14 @@
         <testsuite name="controller">
             <directory>tests/Controller</directory>
         </testsuite>
+        <!-- API Contract tests - fast validation of response formats, for pre-commit -->
+        <testsuite name="api-contract">
+            <directory>tests/Api/Contract</directory>
+        </testsuite>
+        <!-- API Functional tests - CRUD operations with real database, for CI -->
+        <testsuite name="api-functional">
+            <directory>tests/Api/Functional</directory>
+        </testsuite>
         <!-- Performance tests -->
         <testsuite name="performance">
             <directory>tests/Performance</directory>
