feat(ci): add E2E tests with PHP code coverage
- Add E2E job to CI workflow that runs Playwright tests
- Create PHP coverage collector (public/coverage.php) for E2E tests
- Enable coverage collection via COVERAGE_ENABLED and XDEBUG_MODE env vars
- Upload E2E coverage to Codecov with 'e2e' flag
- Upload PHPUnit coverage with 'unit' flag for separation
- Include test artifacts (screenshots, reports) on failure

The coverage collector:
- Starts Xdebug coverage on each HTTP request
- Saves coverage data to var/coverage/e2e/*.json
- Provides /coverage.php?action=report endpoint for Clover XML export
- Only active when COVERAGE_ENABLED=1

--- a/compose.yml
+++ b/compose.yml
@@ -193,6 +193,9 @@ services:
       - APP_FROZEN_TIME=2024-01-15 12:00:00
       # Use separate E2E database to avoid conflicts with dev
       - DATABASE_URL=mysql://timetracker:timetracker@db-e2e:3306/timetracker?serverVersion=mariadb-12.1.0&charset=utf8mb4
+      # Coverage collection (set COVERAGE_ENABLED=1 XDEBUG_MODE=coverage to enable)
+      - COVERAGE_ENABLED=${COVERAGE_ENABLED:-0}
+      - XDEBUG_MODE=${XDEBUG_MODE:-off}
     volumes:
       - .:/var/www/html
       - ./public:/var/www/html/public
