--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,5 +128,102 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: var/coverage/clover.xml
+          flags: unit
           fail_ci_if_error: false
           verbose: true
+
+  e2e:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
+
+      - name: Set up Node.js
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Build E2E image
+        run: docker buildx bake app-e2e --load
+
+      - name: Install dependencies
+        env:
+          COMPOSE_PROFILES: e2e
+        run: |
+          mkdir -p vendor var/cache var/log bin
+          chmod -R 777 vendor var bin
+          docker compose run --rm app-e2e composer install --no-interaction --prefer-dist --ignore-platform-req=php
+          docker compose run --rm app-e2e npm install --legacy-peer-deps
+
+      - name: Create coverage directory
+        run: mkdir -p var/coverage/e2e && chmod -R 777 var/coverage
+
+      - name: Start E2E stack with coverage
+        env:
+          COMPOSE_PROFILES: e2e
+        run: |
+          # Start with coverage enabled
+          COVERAGE_ENABLED=1 XDEBUG_MODE=coverage docker compose up -d
+          # Wait for database to be ready
+          docker compose exec -T db-e2e mariadb-admin ping -h 127.0.0.1 -uroot -pglobal123 --wait --connect-timeout=60
+          # Wait for app to be ready (check login page responds)
+          timeout 60 bash -c 'until curl -sf http://localhost:8766/ > /dev/null 2>&1; do sleep 2; done' || echo "App may not be ready"
+          # Verify coverage is enabled
+          curl -s http://localhost:8766/coverage.php?action=status || true
+
+      - name: Install Playwright browsers
+        run: npx playwright install chromium --with-deps
+
+      - name: Run E2E tests
+        env:
+          E2E_BASE_URL: http://localhost:8766
+        run: npm run e2e
+
+      - name: Collect E2E coverage
+        if: always()
+        run: |
+          # Fetch coverage report from the app
+          curl -s "http://localhost:8766/coverage.php?action=report&format=clover" > var/coverage/e2e-clover.xml || true
+          # Show coverage status
+          curl -s "http://localhost:8766/coverage.php?action=status" || true
+          # Check if coverage file has content
+          if [ -s var/coverage/e2e-clover.xml ]; then
+            echo "E2E coverage collected successfully"
+            head -20 var/coverage/e2e-clover.xml
+          else
+            echo "No E2E coverage data collected"
+          fi
+
+      - name: Upload E2E coverage to Codecov
+        if: always()
+        uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: var/coverage/e2e-clover.xml
+          flags: e2e
+          fail_ci_if_error: false
+          verbose: true
+
+      - name: Upload test artifacts
+        if: failure()
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: e2e-artifacts
+          path: |
+            playwright-report/
+            test-results/
+            var/coverage/
+          retention-days: 7
+
+      - name: Stop E2E stack
+        if: always()
+        env:
+          COMPOSE_PROFILES: e2e
+        run: docker compose down
