--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,10 +133,14 @@ jobs:
           verbose: true
 
   e2e:
-    name: E2E Tests
+    name: E2E Tests (${{ matrix.shard }}/${{ strategy.job-total }})
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 20
     needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: [1, 2, 3]
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -157,23 +161,22 @@ jobs:
         env:
           COMPOSE_PROFILES: e2e
         run: |
-          mkdir -p vendor var/cache var/log bin
-          chmod -R 777 vendor var bin
+          mkdir -p vendor var/cache var/log bin var/coverage/e2e
+          chmod -R 755 vendor var bin
           docker compose run --rm app-e2e composer install --no-interaction --prefer-dist --ignore-platform-req=php
           docker compose run --rm app-e2e npm install --legacy-peer-deps
-
-      - name: Create coverage directory
-        run: mkdir -p var/coverage/e2e && chmod -R 777 var/coverage
 
       - name: Start E2E stack with coverage
         env:
           COMPOSE_PROFILES: e2e
+          COVERAGE_ENABLED: '1'
+          XDEBUG_MODE: coverage
         run: |
-          # Start with coverage enabled
-          COVERAGE_ENABLED=1 XDEBUG_MODE=coverage docker compose up -d
-          # Wait for database to be ready
-          docker compose exec -T db-e2e mariadb-admin ping -h 127.0.0.1 -uroot -pglobal123 --wait --connect-timeout=60
-          # Wait for app to be ready (check login page responds)
+          docker compose up -d
+          # Wait for database using compose healthcheck
+          docker compose exec -T db-e2e mariadb-admin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD" --wait --connect-timeout=60 || \
+            docker compose exec -T db-e2e mariadb-admin ping -h 127.0.0.1 -uroot -pglobal123 --wait --connect-timeout=60
+          # Wait for app to be ready
           timeout 60 bash -c 'until curl -sf http://localhost:8766/ > /dev/null 2>&1; do sleep 2; done' || echo "App may not be ready"
           # Verify coverage is enabled
           curl -s http://localhost:8766/coverage.php?action=status || true
@@ -181,24 +184,21 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install chromium --with-deps
 
-      - name: Run E2E tests
+      - name: Run E2E tests (shard ${{ matrix.shard }}/3)
         env:
           E2E_BASE_URL: http://localhost:8766
-        run: npm run e2e
+        run: npx playwright test --shard=${{ matrix.shard }}/3 --max-failures=10
 
       - name: Collect E2E coverage
         if: always()
         run: |
           # Fetch coverage report from the app
-          curl -s "http://localhost:8766/coverage.php?action=report&format=clover" > var/coverage/e2e-clover.xml || true
-          # Show coverage status
-          curl -s "http://localhost:8766/coverage.php?action=status" || true
+          curl -s "http://localhost:8766/coverage.php?action=report&format=clover" > var/coverage/e2e-clover-${{ matrix.shard }}.xml || true
           # Check if coverage file has content
-          if [ -s var/coverage/e2e-clover.xml ]; then
-            echo "E2E coverage collected successfully"
-            head -20 var/coverage/e2e-clover.xml
+          if [ -s var/coverage/e2e-clover-${{ matrix.shard }}.xml ]; then
+            echo "E2E coverage collected successfully for shard ${{ matrix.shard }}"
           else
-            echo "No E2E coverage data collected"
+            echo "No E2E coverage data collected for shard ${{ matrix.shard }}"
           fi
 
       - name: Upload E2E coverage to Codecov
@@ -206,7 +206,7 @@ jobs:
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: var/coverage/e2e-clover.xml
+          files: var/coverage/e2e-clover-${{ matrix.shard }}.xml
           flags: e2e
           fail_ci_if_error: false
           verbose: true
@@ -215,7 +215,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
-          name: e2e-artifacts
+          name: e2e-artifacts-shard-${{ matrix.shard }}
           path: |
             playwright-report/
             test-results/
