fix(ci): use Docker internal network for E2E tests
docker compose run doesn't support --network flag like docker run.
Use internal service name httpd-e2e:80 instead of host network.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,10 +181,9 @@ jobs:
           COMPOSE_PROFILES: e2e
         run: |
           # Run Playwright from inside the container (browsers pre-installed)
-          # Use host.docker.internal to access httpd-e2e exposed on port 8766
+          # Use internal Docker network: httpd-e2e is the service name, port 80 is internal
           docker compose run --rm \
-            --network host \
-            -e E2E_BASE_URL=http://localhost:8766 \
+            -e E2E_BASE_URL=http://httpd-e2e:80 \
             -e CI=true \
             app-e2e npx playwright test --shard=${{ matrix.shard }}/3 -x
 
