--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,13 +168,38 @@ jobs:
           COVERAGE_ENABLED: '1'
           XDEBUG_MODE: coverage
         run: |
+          # Start the E2E stack
           docker compose up -d
+
           # Wait for database
           docker compose exec -T db-e2e mariadb-admin ping -h 127.0.0.1 -uroot -pglobal123 --wait --connect-timeout=60
-          # Wait for app to be ready
-          timeout 60 bash -c 'until curl -sf http://localhost:8766/ > /dev/null 2>&1; do sleep 2; done' || echo "App may not be ready"
+
+          # Clear and warmup Symfony cache for test environment
+          docker compose exec -T app-e2e php bin/console cache:clear --env=test || true
+          docker compose exec -T app-e2e php bin/console cache:warmup --env=test || true
+
+          # Show running containers for debugging
+          docker compose ps
+
+          # Wait for app to be ready (increased timeout, will fail if not ready)
+          echo "Waiting for app to be ready..."
+          for i in {1..30}; do
+            if curl -sf http://localhost:8766/login -o /dev/null 2>&1; then
+              echo "App is ready after $i attempts"
+              break
+            fi
+            if [ $i -eq 30 ]; then
+              echo "App failed to start within timeout"
+              docker compose logs app-e2e | tail -50
+              docker compose logs httpd-e2e | tail -20
+              exit 1
+            fi
+            echo "Attempt $i: waiting for app..."
+            sleep 3
+          done
+
           # Verify coverage is enabled
-          curl -s http://localhost:8766/coverage.php?action=status || true
+          curl -s http://localhost:8766/coverage.php?action=status || echo "Coverage endpoint not responding"
 
       - name: Run E2E tests (shard ${{ matrix.shard }}/3)
         env:
