fix(ci): add detailed error logging for E2E app startup failures
Show HTTP response code, response body, PHP-FPM logs, nginx logs,
and Symfony error log to help diagnose why the app returns 500 errors.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,17 +184,24 @@ jobs:
           # Wait for app to be ready (increased timeout, will fail if not ready)
           echo "Waiting for app to be ready..."
           for i in {1..30}; do
-            if curl -sf http://localhost:8766/login -o /dev/null 2>&1; then
-              echo "App is ready after $i attempts"
+            HTTP_CODE=$(curl -s -o /tmp/response.html -w "%{http_code}" http://localhost:8766/login 2>&1)
+            if [ "$HTTP_CODE" = "200" ]; then
+              echo "App is ready after $i attempts (HTTP $HTTP_CODE)"
               break
             fi
             if [ $i -eq 30 ]; then
-              echo "App failed to start within timeout"
+              echo "App failed to start within timeout (last HTTP code: $HTTP_CODE)"
+              echo "=== Last response body ==="
+              cat /tmp/response.html 2>/dev/null | head -100 || true
+              echo "=== PHP-FPM logs ==="
               docker compose logs app-e2e | tail -50
+              echo "=== Nginx logs ==="
               docker compose logs httpd-e2e | tail -20
+              echo "=== Symfony error log ==="
+              docker compose exec -T app-e2e cat var/log/test.log 2>/dev/null | tail -100 || echo "No test.log found"
               exit 1
             fi
-            echo "Attempt $i: waiting for app..."
+            echo "Attempt $i: HTTP $HTTP_CODE, waiting..."
             sleep 3
           done
 
