--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,12 @@ jobs:
           chmod -R 777 var bin vendor
           if [ ! -f phpstan.neon ] && [ -f phpstan.dist.neon ]; then cp phpstan.dist.neon phpstan.neon; fi
 
+      - name: Warmup Symfony cache
+        env:
+          COMPOSE_PROFILES: e2e
+        run: |
+          docker compose run --rm -e APP_ENV=dev app-e2e php bin/console cache:warmup --env=dev
+
       - name: Validate composer.json
         env:
           COMPOSE_PROFILES: e2e
@@ -155,6 +161,12 @@ jobs:
           chmod -R 777 var bin vendor
           if [ ! -f phpunit.xml ] && [ -f phpunit.xml.dist ]; then cp phpunit.xml.dist phpunit.xml; fi
           sed '1s/^/USE unittest;\\n/' sql/full.sql > sql/unittest/001_testtables.sql
+
+      - name: Warmup Symfony cache
+        env:
+          COMPOSE_PROFILES: e2e
+        run: |
+          docker compose run --rm -e APP_ENV=test app-e2e php bin/console cache:warmup --env=test
 
       - name: Start test database
         env:
