--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,7 +208,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3]
+        shard: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -276,14 +276,14 @@ jobs:
           # Verify coverage is enabled
           curl -s http://localhost:8766/coverage.php?action=status || echo "Coverage endpoint not responding"
 
-      - name: Run E2E tests (shard ${{ matrix.shard }}/3)
+      - name: Run E2E tests (shard ${{ matrix.shard }}/10)
         env:
           COMPOSE_PROFILES: e2e
         run: |
           docker compose run --rm \
             -e E2E_BASE_URL=http://httpd-e2e:80 \
             -e CI=true \
-            app-e2e npx playwright test --shard=${{ matrix.shard }}/3 -x
+            app-e2e npx playwright test --shard=${{ matrix.shard }}/10 -x
 
       - name: Collect E2E coverage
         if: always()
