test(exception): add JiraApiExceptionTest with comprehensive unit tests
Add 8 tests covering:
- Constructor message prefixing logic
- Code and previous exception handling
- getRedirectUrl() method

Coverage: 75% → 100% (4/4 lines)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -50,6 +50,8 @@
             <file>tests/Entity/UserTicketsystemTest.php</file>
             <!-- Enum unit tests -->
             <directory>tests/Enum</directory>
+            <!-- Exception unit tests -->
+            <directory>tests/Exception</directory>
             <!-- Repository unit tests -->
             <file>tests/Repository/EntryRepositoryTest.php</file>
             <file>tests/Repository/InterpretationUserFilterTest.php</file>
