test(ldap): add integration tests for LdapClientService
Add comprehensive integration tests using ldap-dev container:
- Test valid login with multiple users (unittest, developer, admin, i.myself)
- Test login failures (wrong password, non-existent user, empty password)
- Test connection errors (wrong host, wrong port, invalid read user)
- Test username normalization during login (uppercase, spaces)
- Test teams extraction without mapping file

Configure phpunit.xml.dist to run these tests in integration suite
instead of unit suite since they require ldap-dev service.

Coverage: LdapClientService 62.80% -> 92.75%

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -37,6 +37,8 @@
             <directory>tests/Response</directory>
             <directory>tests/Service</directory>
             <directory>tests/Util</directory>
+            <!-- Exclude integration tests that require external services -->
+            <exclude>tests/Service/Ldap/LdapClientServiceIntegrationTest.php</exclude>
             <!-- Entity unit tests (not *DatabaseTest) -->
             <file>tests/Entity/AccountTest.php</file>
             <file>tests/Entity/ActivityTest.php</file>
@@ -69,6 +71,7 @@
             <file>tests/Entity/TeamDatabaseTest.php</file>
             <file>tests/Entity/UserDatabaseTest.php</file>
             <file>tests/Security/RememberMeRedirectTest.php</file>
+            <file>tests/Service/Ldap/LdapClientServiceIntegrationTest.php</file>
             <directory>tests/Repository</directory>
             <directory>tests/Command</directory>
             <exclude>tests/Repository/EntryRepositoryTest.php</exclude>
